added wind rose

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div id="air_temp_set_1" style="width:500px;height:300px;"></div>
     <div id="snow_depth_set_1" style="width:500px;height:300px;"></div>
-    <!-- <div id="snow_density" style="width:500px;height:300px;"></div> -->
     <div id="net_radiation_set_1" style="width:500px;height:300px;"></div>
+    <div id="wind_rose" style="width:500px;height:300px;"></div>
     <div id="cameras">
         <h3 id="cName0"></h3>
         <img id="cImage0" width="500px" height="300px">
@@ -39,11 +39,10 @@
         <div id="avy_p2_text"></div>
     </div>
 
-    <script src="main.js" lang="text/javascript">
-    </script>
-    <script src="camera.js" lang="text/javascript">
-    </script>
+    <script src="main.js" lang="text/javascript"></script>
+    <script src="camera.js" lang="text/javascript"></script>
     <script src="uac.js" lang="text/javascript"></script>
+    <script src="wind.js" lang="text/javascript"></script>
 </body>
 
 </html>
