--- a/projects/weather_gov/weather_gov.html
+++ b/projects/weather_gov/weather_gov.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="utf-8">
     <title>Current Weather</title>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 
 <body>
-    <div id="weather"></div>
+    <div id="forecast_plot"></div>
     <script src="forecast.js" lang="text/javascript">
     // future javascript
     </script>
