--- a/index.html
+++ b/index.html
@@ -8,20 +8,31 @@
 </head>
 
 <body>
-    <div id="air_temp_set_1" style="width:500px;height:300px;"></div>
-    <div id="snow_depth_set_1" style="width:500px;height:300px;"></div>
-    <div id="net_radiation_set_1" style="width:500px;height:300px;"></div>
-    <div id="wind_rose" style="width:500px;height:300px;"></div>
-    <div id="cameras">
-        <h3 id="cName0"></h3>
-        <img id="cImage0" width="500px" height="300px">
-        <h3 id="cName1"></h3>
-        <img id="cImage1" width="500px" height="300px">
-        <h3 id="cName2"></h3>
-        <img id="cImage2" width="500px" height="300px">
-        <h3 id="cName3"></h3>
-        <img id="cImage3" width="500px" height="300px">
+    <div id="Observations">
+        <h3>Current Weather</h3>
+        <div id="air_temp_set_1" style="width:800px;height:300px;"></div>
+        <div id="snow_depth_set_1" style="width:800px;height:300px;"></div>
+        <div id="net_radiation_set_1" style="width:800px;height:300px;"></div>
+        <div id="wind_rose" style="width:800px;height:300px;"></div>
     </div>
+
+    <div id="Forecast">
+        <h3>Tony Grove Weather Forecast</h3>
+        <div id="forecast_plot" style="width:800px;height:600px;"></div>
+    </div>
+
+    <div id="Cameras">
+        <h3>Wep Cams</h3>
+        <h4 id="cName0"> </h4>
+        <img id="cImage0" width="800px" height="480px">
+        <h4 id="cName1"> </h4>
+        <img id="cImage1" width="800px" height="480px">
+        <h4 id="cName2"> </h4>
+        <img id="cImage2" width="800px" height="480px">
+        <h4 id="cName3"> </h4>
+        <img id="cImage3" width="800px" height="480px">
+    </div>
+
     <div id="UAC">
         <h3>Utah Avalance Center - Logan Region Forecast</h3>
         <h4>Date Issues:</h4>
@@ -43,6 +54,7 @@
     <script src="camera.js" lang="text/javascript"></script>
     <script src="uac.js" lang="text/javascript"></script>
     <script src="wind.js" lang="text/javascript"></script>
+    <script src="forecast.js" lang="text/javascript"></script>
 </body>
 
 </html>
