--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id="Observations">
-        <h3>Current Weather</h3>
+        <h3>Current Weather (mesowest.utah.edu)</h3>
         <div id="air_temp_set_1" style="width:800px;height:300px;"></div>
         <div id="snow_depth_set_1" style="width:800px;height:300px;"></div>
         <div id="net_radiation_set_1" style="width:800px;height:300px;"></div>
@@ -17,12 +17,12 @@
     </div>
 
     <div id="Forecast">
-        <h3>Tony Grove Weather Forecast</h3>
+        <h3>Tony Grove Weather Forecast (weather.gov)</h3>
         <div id="forecast_plot" style="width:800px;height:600px;"></div>
     </div>
 
     <div id="Cameras">
-        <h3>Web Cams</h3>
+        <h3>Web Cams (udot.utah.gov</h3>
         <h4 id="cName0"> </h4>
         <img id="cImage0" width="800px" height="480px">
         <h4 id="cName1"> </h4>
@@ -34,7 +34,7 @@
     </div>
 
     <div id="UAC">
-        <h3>Utah Avalance Center - Logan Region Forecast</h3>
+        <h3>Avalanche Forecast - Logan Region (utahavalanchecenter.org)</h3>
         <h4>Date Issues:</h4>
         <div id="date_issued"></div>
         <h4>Bottom Line</h4>
