--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <div id="Cameras">
-        <h3>Web Cams (udot.utah.gov</h3>
+        <h3>Web Cams (udot.utah.gov)</h3>
         <h4 id="cName0"> </h4>
         <img id="cImage0" width="800px" height="480px">
         <h4 id="cName1"> </h4>
