--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div id="UAC">
         <h3>Avalanche Forecast - Logan Region (utahavalanchecenter.org)</h3>
-        <h4>Date Issues:</h4>
+        <h4>Date Issued:</h4>
         <div id="date_issued"></div>
         <h4>Bottom Line</h4>
         <div id="bottom_line"></div>
