added js to repo

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       </div>
   </main>
 
-  <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/logan/mesowest_logan_air.js" lang="text/javascript"></script>
   <script src="js/logan/mesowest_logan_snow.js" lang="text/javascript"></script>
   <script src="js/logan/camera_logan.js" lang="text/javascript"></script>
