--- a/index_slc.html
+++ b/index_slc.html
@@ -239,60 +239,12 @@
               </div>
             </div>
           </div>
-
-          <!-- Cameras Content Row -->
-          <!-- <div class="row">
-            <div class="col-xl-3 col-md-6 mb-4">
-              <div class="card border-left-info shadow h-100 py-2">
-                <div class="card-body">
-                  <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                      <img class="card-img-top" id="cImage0" alt="Card image cap">
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-3 col-md-6 mb-4">
-              <div class="card border-left-info shadow h-100 py-2">
-                <div class="card-body">
-                  <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                      <img class="card-img-top" id="cImage1" alt="Card image cap">
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-3 col-md-6 mb-4">
-              <div class="card border-left-info shadow h-100 py-2">
-                <div class="card-body">
-                  <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                      <img class="card-img-top" id="cImage2" alt="Card image cap">
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xl-3 col-md-6 mb-4">
-                <div class="card border-left-info shadow h-100 py-2">
-                  <div class="card-body">
-                    <div class="row no-gutters align-items-center">
-                      <div class="col mr-2">
-                        <img class="card-img-top" id="cImage3" alt="Card image cap">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>-->
         </div>
       </div>
-
+    </div>
   </main>
 
-  <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/slc/mesowest_slc_air.js" lang="text/javascript"></script>
   <script src="js/slc/mesowest_slc_snow.js" lang="text/javascript"></script>
   <script src="js/slc/camera_slc.js" lang="text/javascript"></script>
