added accordion cams

--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
         <a class="navbar-brand" href="#">Bear River Range Snow Weather</a>
         <div class="offcanvas offcanvas-start text-bg-dark" data-bs-scroll="true" data-bs-backdrop="true" tabindex="-1"
           id="offcanvasNavbarDark" aria-labelledby="offcanvasNavbarDarkLabel">
-          <!-- <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarDarkLabel">Offcanvas Test</h5>
+          <div class="offcanvas-header">
+            <!-- <h5 class="offcanvas-title" id="offcanvasNavbarDarkLabel">Offcanvas Test</h5> -->
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
               aria-label="Close"></button>
-          </div> -->
+          </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-start flex-grow-1 pe-3">
 
@@ -123,7 +123,7 @@
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                   aria-expanded="false">Additional Links</a>
                 <ul class="dropdown-menu">
-                  <h6 class="dropdown-header">Avalanch Forecasts:</h6>
+                  <h6 class="dropdown-header">Avalanche Forecasts:</h6>
                   <a class="dropdown-item" href="https://utahavalanchecenter.com/" target="_blank">Utah Avalanche Center</a>
                   <a class="dropdown-item" href="https://avalanche.state.co.us/" target="_blank">Colorado Avalanche Information Center</a>
                   <li>
@@ -132,7 +132,7 @@
                   <h6 class="dropdown-header">Forecast Websites:</h6>
                   <a class="dropdown-item" href="https://spotwx.com/" target="_blank">Spot WX</a>
                   <a class="dropdown-item" href="https://weather.utah.edu/index.php?&t=naefs&d=PL&r=CLN" target="_blank">UofU Plumes</a>
-                  <a class="dropdown-item" href="https://www.pivotalweather.com/model.php?m=gfs&p=snku_acc&rh=2019092612&fh=78&r=us_nw&dpdt=&mc=" target="_blank">Pivital Weather</a>
+                  <a class="dropdown-item" href="https://www.pivotalweather.com/model.php?m=gfs&p=snku_acc&rh=2019092612&fh=78&r=us_nw&dpdt=&mc=" target="_blank">Pivotal Weather</a>
                   <li>
                     <hr class="dropdown-divider">
                   </li>
