--- a/index_slc.html
+++ b/index_slc.html
@@ -85,11 +85,11 @@
         <a class="navbar-brand" href="#">Wasatch Mountains Snow Weather</a>
         <div class="offcanvas offcanvas-start text-bg-dark" data-bs-scroll="true" data-bs-backdrop="true" tabindex="-1"
           id="offcanvasNavbarDark" aria-labelledby="offcanvasNavbarDarkLabel">
-          <!-- <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarDarkLabel">Offcanvas Test</h5>
+          <div class="offcanvas-header">
+            <!-- <h5 class="offcanvas-title" id="offcanvasNavbarDarkLabel">Offcanvas Test</h5> -->
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
               aria-label="Close"></button>
-          </div> -->
+          </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-start flex-grow-1 pe-3">
 
@@ -123,7 +123,7 @@
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                   aria-expanded="false">Additional Links</a>
                 <ul class="dropdown-menu">
-                  <h6 class="dropdown-header">Avalanch Forecasts:</h6>
+                  <h6 class="dropdown-header">Avalanche Forecasts:</h6>
                   <a class="dropdown-item" href="https://utahavalanchecenter.com/" target="_blank">Utah Avalanche
                     Center</a>
                   <a class="dropdown-item" href="https://avalanche.state.co.us/" target="_blank">Colorado Avalanche
@@ -137,7 +137,7 @@
                     target="_blank">UofU Plumes</a>
                   <a class="dropdown-item"
                     href="https://www.pivotalweather.com/model.php?m=gfs&p=snku_acc&rh=2019092612&fh=78&r=us_nw&dpdt=&mc="
-                    target="_blank">Pivital Weather</a>
+                    target="_blank">Pivotal Weather</a>
                   <li>
                     <hr class="dropdown-divider">
                   </li>
@@ -151,6 +151,12 @@
                     Weather Weenies</a>
                   <a class="dropdown-item" href="https://utahskiweather.blogspot.com/" target="_blank">Utah Ski
                     Weather</a>
+                  <li>
+                    <hr class="dropdown-divider">
+                  </li>
+                  <h6 class="dropdown-header">Water Supply Data:</h6>
+                  <a class="dropdown-item" href="" target="_blank">NRCS Snotel</a>
+                  <a class="dropdown-item" href="" target="_blank">Basin SWE</a>
                 </ul>
               </li>
             </ul>
@@ -199,46 +205,172 @@
               </div>
             </div>
           </div>
-
           <!--  -->
-          <div class="row">
-            <!-- Camera 0 -->
-            <div class="col-xl-3 col-md-6 mb-4">
-              <div class="card boarder shadow">
-                <h5 class="card-header">Wasatch BLVD @ BCC</h5>
-                <div class="card-body">
-                  <img class="card-img-top" id="cImage0" alt="image">
+
+          <h2>Trafic Cameras</h2>
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                  Big Cottonwood Canyon (SR-190)
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
+                <div class="accordion-body">
+                  <div class="row">
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">Wasatch Blvd @ BCC
+                        </h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="bcc_cam0" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">BCC @ Dogwood MP 4.1</h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="bcc_cam1" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">BCC @ S Curves MP 6.38</h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="bcc_cam2" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">BCC @ Cardiff Fork MP 10.74</h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="bcc_cam3" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">BCC @ Silver Fork MP 12.54</h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="bcc_cam4" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">BCC @ Solitude MP 14.5</h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="bcc_cam5" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">BCC @ Brighton Circle MP 16</h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="bcc_cam6" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-            <!-- Camera 1 -->
-            <div class="col-xl-3 col-md-6 mb-4">
-              <div class="card boarder shadow">
-                <h5 class="card-header">LCC @ MP 9.7</h5>
-                <div class="card-body">
-                  <img class="card-img-top" id="cImage1" alt="image">
-                </div>
-              </div>
-            </div>
-            <!-- Camera 2 -->
-            <div class="col-xl-3 col-md-6 mb-4">
-              <div class="card boarder shadow">
-                <h5 class="card-header">LCC @ MP 12.16</h5>
-                <div class="card-body">
-                  <img class="card-img-top" id="cImage2" alt="Card image cap">
-                </div>
-              </div>
-            </div>
-            <!-- Camera 3 -->
-            <div class="col-xl-3 col-md-6 mb-4">
-              <div class="card boarder shadow">
-                <h5 class="card-header">BCC @ Cardiff Fork MP 10.74</h5>
-                <div class="card-body">
-                  <img class="card-img-top" id="cImage3" alt="Card image cap">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Little Cottonwood Canyon (SR-210)
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo">
+                <div class="accordion-body">
+                  <div class="row">
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">Wasatch Blvd @ LCC
+                        </h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="lcc_cam0" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">INTERSECTION OF HWY 209 & HWY 210</h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="lcc_cam1" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">LCC @ MP 5.96</h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="lcc_cam2" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">LCC @ MP 7.4</h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="lcc_cam3" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">LCC @ MP 8.7</h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="lcc_cam4" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">LCC @ WHITE PINE PARKING MP 9.2</h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="lcc_cam5" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">LCC @ MP 9.7</h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="lcc_cam6" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">LCC @ ALTA BYPASS MP 10.95</h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="lcc_cam7" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">LCC @ ALTA MP 12.16</h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="lcc_cam8" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+
+          <h1></h1>
+
         </div>
       </div>
     </div>
