--- a/index_slc.html
+++ b/index_slc.html
@@ -367,10 +367,30 @@
                 </div>
               </div>
             </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Parleys (I-80)
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
+                <div class="accordion-body">
+                  <div class="row">
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">I-80 @ Parleys Summit
+                        </h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="i80_cam0" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-
-          <h1></h1>
-
         </div>
       </div>
     </div>
