--- a/index_tetons.html
+++ b/index_tetons.html
@@ -112,10 +112,26 @@
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="index.html">Bear Rivers</a></li>
                   <li><a class="dropdown-item" href="index_slc.html">Wasatch</a></li>
-                  <li><a class="dropdown-item" href="#">Tetons</a></li>
+                  <li><a class="dropdown-item" href="index_tetons.html">Tetons</a></li>
                   <li><a class="dropdown-item" href="#">La Sals</a></li>
                 </ul>
               </li>
+
+              <hr class="sidebar-divider">
+              <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                      Teton Pass
+                    </button>
+                  </h2>
+                  <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
+                    <div class="accordion-body">
+                    </div>
+                  </div>
+                </div>
+              </div>
 
               <!-- Divider -->
               <hr class="sidebar-divider">
@@ -160,23 +176,22 @@
                 </ul>
               </li>
 
+
               <hr class="sidebar-divider">
 
               <li class="nav-item active">
-                <a class="twitter-timeline"
-                  href="https://twitter.com/Dface_killah/lists/1613209019195482115?ref_src=twsrc%5Etfw">A Twitter List
-                  by Dface_killah</a>
+                <a class="twitter-timeline" data-theme="dark"
+                  href="https://twitter.com/TwitterDev/lists/national-parks?ref_src=twsrc%5Etfw">A Twitter List by
+                  TwitterDev</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                <!-- <a class="twitter-timeline" data-theme="dark" href="https://twitter.com/i/lists/1613209019195482115">A
-                  Twitter List</a>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
               </li>
-
             </ul>
           </div>
         </div>
       </div>
     </nav>
+
+    
 
     <div id="content-wrapper" class="d-flex flex-column">
       <div id="content">
@@ -226,7 +241,7 @@
               <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                  Big Cottonwood Canyon (SR-190)
+                  Teton Pass
                 </button>
               </h2>
               <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
@@ -297,7 +312,7 @@
               <h2 class="accordion-header" id="headingTwo">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Little Cottonwood Canyon (SR-210)
+                  Jackson Hole Mountain Resort
                 </button>
               </h2>
               <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo">
@@ -395,7 +410,10 @@
                         <h5 class="card-header">I-80 @ Parleys Summit
                         </h5>
                         <div class="card-body">
-                          <img class="card-img-top" id="i80_cam0" alt="image">
+                          <a class="twitter-timeline"
+                            href="https://twitter.com/TwitterDev/lists/national-parks?ref_src=twsrc%5Etfw">A Twitter
+                            List by TwitterDev</a>
+                          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
                       </div>
                     </div>
@@ -410,10 +428,10 @@
   </main>
 
   <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/slc/mesowest_slc_air.js" lang="text/javascript"></script>
-  <script src="js/slc/mesowest_slc_snow.js" lang="text/javascript"></script>
-  <script src="js/slc/camera_slc.js" lang="text/javascript"></script>
-  <script src="js/slc/forecast_slc.js" lang="text/javascript"></script>
+  <script src="js/tetons/mesowest_air_tetons.js" lang="text/javascript"></script>
+  <script src="js/tetons/mesowest_snow_tetons.js" lang="text/javascript"></script>
+  <script src="js/tetons/camera_tetons.js" lang="text/javascript"></script>
+  <script src="js/tetons/forecast_tetons.js" lang="text/javascript"></script>
 
 </body>
 
