--- a/index_slc.html
+++ b/index_slc.html
@@ -70,7 +70,7 @@
 
 
   <!-- Custom styles for this template -->
-  <link href="navbar.css" rel="stylesheet">
+  <link href="css/navbar.css" rel="stylesheet">
 </head>
 
 <body>
