--- a/index_tetons.html
+++ b/index_tetons.html
@@ -235,7 +235,7 @@
           </div>
           <!--  -->
 
-          <h2>traffic Cameras</h2>
+          <h2>Traffic Cameras</h2>
           <div class="accordion" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingOne">
