added udot sign

--- a/index_slc.html
+++ b/index_slc.html
@@ -211,6 +211,9 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="responsive-plot" id="forecast_plot">
+                        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+                        <script class="reloadMe" src="js/forecast_slc.js"></script>
+                        <button>Reload script</button> -->
                       </div>
                     </div>
                   </div>
@@ -232,6 +235,15 @@
               <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
                 <div class="accordion-body">
                   <div class="row">
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">BCC UDOT SIGN
+                        </h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="bcc_cam7" alt="image">
+                        </div>
+                      </div>
+                    </div>
                     <div class="col-xl-4 col-md-6 mb-4">
                       <div class="card boarder shadow">
                         <h5 class="card-header">Wasatch Blvd @ BCC
@@ -305,8 +317,15 @@
                   <div class="row">
                     <div class="col-xl-4 col-md-6 mb-4">
                       <div class="card boarder shadow">
-                        <h5 class="card-header">Wasatch Blvd @ LCC
-                        </h5>
+                        <h5 class="card-header">LCC UDOT SIGN</h5>
+                        <div class="card-body">
+                          <img class="card-img-top" id="lcc_cam9" alt="image">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-4">
+                      <div class="card boarder shadow">
+                        <h5 class="card-header">Wasatch Blvd @ LCC</h5>
                         <div class="card-body">
                           <img class="card-img-top" id="lcc_cam0" alt="image">
                         </div>
