--- a/projects/wind_plot/index.html
+++ b/projects/wind_plot/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="wind_rose" style="width:500px;height:300px;"></div>
 
-    <script src="wind.js" lang="text/javascript">
+    <script src="wind_slc.js" lang="text/javascript">
     </script>
 </body>
 
