updated forecast location

--- a/index_slc.html
+++ b/index_slc.html
@@ -216,7 +216,7 @@
           <div class="row">
             <div class="col-xl-8 mb-4">
               <div class="card border-left-info shadow h-100">
-                <h5 class="card-header">Forecast</h5>
+                <h5 class="card-header">Alta UT Point Forecast</h5>
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
@@ -232,7 +232,7 @@
             </div>
             <div class="col-xl-4 mb-4">
               <div class="card border-left-info shadow h-100">
-                <h5 class="card-header">7 Day Forecast</h5>
+                <h5 class="card-header">Alta UT 7-Day Forecast</h5>
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
@@ -241,72 +241,72 @@
                         </nav> -->
                         <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0"
                           class="scrollspy-example position-relative mt-2 overflow-auto" tabindex="0">
-                          <h5 id="name_0"></h5>
+                          <h6 id="name_0"></h6>
                           <div>
                             <img id="icon_0" style='float: left;' />
                             <p id="text_0"></p>
                           </div>
-                          <h5 id="name_1"></h5>
+                          <h6 id="name_1"></h6>
                           <div>
                             <img id="icon_1" style='float: left;' />
                             <p id="text_1"></p>
                           </div>
-                          <h5 id="name_2"></h5>
+                          <h6 id="name_2"></h6>
                           <div>
                             <img id="icon_2" style='float: left;' />
                             <p id="text_2"></p>
                           </div>
-                          <h5 id="name_3"></h5>
+                          <h6 id="name_3"></h6>
                           <div>
                             <img id="icon_3" style='float: left;' />
                             <p id="text_3"></p>
                           </div>
-                          <h5 id="name_4"></h5>
+                          <h6 id="name_4"></h6>
                           <div>
                             <img id="icon_4" style='float: left;' />
                             <p id="text_4"></p>
                           </div>
-                          <h5 id="name_5"></h5>
+                          <h6 id="name_5"></h6>
                           <div>
                             <img id="icon_5" style='float: left;' />
                             <p id="text_5"></p>
                           </div>
-                          <h5 id="name_6"></h5>
+                          <h6 id="name_6"></h6>
                           <div>
                             <img id="icon_6" style='float: left;' />
                             <p id="text_6"></p>
                           </div>
-                          <h5 id="name_7"></h5>
+                          <h6 id="name_7"></h6>
                           <div>
                             <img id="icon_7" style='float: left;' />
                             <p id="text_7"></p>
                           </div>
-                          <h5 id="name_8"></h5>
+                          <h6 id="name_8"></h6>
                           <div>
                             <img id="icon_8" style='float: left;' />
                             <p id="text_8"></p>
                           </div>
-                          <h5 id="name_9"></h5>
+                          <h6 id="name_9"></h6>
                           <div>
                             <img id="icon_9" style='float: left;' />
                             <p id="text_9"></p>
                           </div>
-                          <h5 id="name_10"></h5>
+                          <h6 id="name_10"></h6>
                           <div>
                             <img id="icon_10" style='float: left;' />
                             <p id="text_10"></p>
                           </div>
-                          <h5 id="name_11"></h5>
+                          <h6 id="name_11"></h6>
                           <div>
                             <img id="icon_11" style='float: left;' />
                             <p id="text_11"></p>
                           </div>
-                          <h5 id="name_12"></h5>
+                          <h6 id="name_12"></h6>
                           <div>
                             <img id="icon_12" style='float: left;' />
                             <p id="text_12"></p>
                           </div>
-                          <h5 id="name_13"></h5>
+                          <h6 id="name_13"></h6>
                           <div>
                             <img id="icon_13" style='float: left;' />
                             <p id="text_13"></p>
