added tetons site

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
               <!-- Nav Item - Dashboard -->
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="index_slc.html">
                   <i class="fas fa-fw fa-tachometer-alt"></i>
                   <span>Home</span></a>
               </li>
@@ -110,10 +110,10 @@
                   Locations
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="index.html">Bear Rivers</a></li>
                   <li><a class="dropdown-item" href="index_slc.html">Wasatch</a></li>
-                  <li><a class="dropdown-item" href="#">Tetons</a></li>
-                  <li><a class="dropdown-item" href="#">La Sals</a></li>
+                  <li><a class="dropdown-item" href="index.html">Bear Rivers</a></li>
+                  <li><a class="dropdown-item" href="index_tetons.html">Tetons</a></li>
+                  <!-- <li><a class="dropdown-item" href="#">La Sals</a></li> -->
                 </ul>
               </li>
 
