remove twitter from tetons nav

--- a/index_tetons.html
+++ b/index_tetons.html
@@ -163,17 +163,13 @@
                 </ul>
               </li>
 
-              <hr class="sidebar-divider">
-
+              <!-- <hr class="sidebar-divider">
               <li class="nav-item active">
                 <a class="twitter-timeline"
                   href="https://twitter.com/Dface_killah/lists/1613209019195482115?ref_src=twsrc%5Etfw">A Twitter List
                   by Dface_killah</a>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                <!-- <a class="twitter-timeline" data-theme="dark" href="https://twitter.com/i/lists/1613209019195482115">A
-                  Twitter List</a>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
-              </li>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>                
+              </li> -->
 
             </ul>
           </div>
