updated logan page

--- a/index_slc.html
+++ b/index_slc.html
@@ -127,6 +127,8 @@
                   <h6 class="dropdown-header">Avalanche Forecasts:</h6>
                   <a class="dropdown-item" href="https://utahavalanchecenter.com/" target="_blank">Utah Avalanche
                     Center</a>
+                  <a class="dropdown-item" href="https://bridgertetonavalanchecenter.org/" target="_blank">Bridger Teton
+                    Avalance Center</a>
                   <a class="dropdown-item" href="https://avalanche.state.co.us/" target="_blank">Colorado Avalanche
                     Information Center</a>
                   <li>
