--- a/index.html
+++ b/index.html
@@ -124,26 +124,35 @@
                   aria-expanded="false">Additional Links</a>
                 <ul class="dropdown-menu">
                   <h6 class="dropdown-header">Avalanche Forecasts:</h6>
-                  <a class="dropdown-item" href="https://utahavalanchecenter.com/" target="_blank">Utah Avalanche Center</a>
-                  <a class="dropdown-item" href="https://avalanche.state.co.us/" target="_blank">Colorado Avalanche Information Center</a>
+                  <a class="dropdown-item" href="https://utahavalanchecenter.com/" target="_blank">Utah Avalanche
+                    Center</a>
+                  <a class="dropdown-item" href="https://bridgertetonavalanchecenter.org/" target="_blank">Bridger Teton
+                    Avalance Center</a>
+                  <a class="dropdown-item" href="https://avalanche.state.co.us/" target="_blank">Colorado Avalanche
+                    Information Center</a>
                   <li>
                     <hr class="dropdown-divider">
                   </li>
                   <h6 class="dropdown-header">Forecast Websites:</h6>
                   <a class="dropdown-item" href="https://spotwx.com/" target="_blank">Spot WX</a>
-                  <a class="dropdown-item" href="https://weather.utah.edu/index.php?&t=naefs&d=PL&r=CLN" target="_blank">UofU Plumes</a>
-                  <a class="dropdown-item" href="https://www.pivotalweather.com/model.php?m=gfs&p=snku_acc&rh=2019092612&fh=78&r=us_nw&dpdt=&mc=" target="_blank">Pivotal Weather</a>
+                  <a class="dropdown-item" href="https://weather.utah.edu/index.php?&t=naefs&d=PL&r=CLN"
+                    target="_blank">UofU Plumes</a>
+                  <a class="dropdown-item"
+                    href="https://www.pivotalweather.com/model.php?m=gfs&p=snku_acc&rh=2019092612&fh=78&r=us_nw&dpdt=&mc="
+                    target="_blank">Pivotal Weather</a>
                   <li>
                     <hr class="dropdown-divider">
                   </li>
                   <h6 class="dropdown-header">Data Websites:</h6>
-                  <a class="dropdown-item" href="https://mesowest.utah.edu/" target="_blank">Mesowest</a>      
+                  <a class="dropdown-item" href="https://mesowest.utah.edu/" target="_blank">Mesowest</a>
                   <li>
                     <hr class="dropdown-divider">
                   </li>
                   <h6 class="dropdown-header">Weather Blogs:</h6>
-                  <a class="dropdown-item" href="https://wasatchweatherweenies.blogspot.com/" target="_blank">Wasatch Weather Weenies</a>
-                  <a class="dropdown-item" href="https://utahskiweather.blogspot.com/" target="_blank">Utah Ski Weather</a>
+                  <a class="dropdown-item" href="https://wasatchweatherweenies.blogspot.com/" target="_blank">Wasatch
+                    Weather Weenies</a>
+                  <a class="dropdown-item" href="https://utahskiweather.blogspot.com/" target="_blank">Utah Ski
+                    Weather</a>
                 </ul>
               </li>
             </ul>
@@ -156,7 +165,7 @@
       <div id="content">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-xl-6 col-md-6">
+            <div class="col-xl-4 col-md-5">
               <div class="card shadow mb-4">
                 <h5 class="card-header">Air Temperature</h5>
                 <div class="card-body">
@@ -165,7 +174,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xl-6 col-md-6">
+            <div class="col-xl-4 col-md-5">
               <div class="card shadow mb-4">
                 <h5 class="card-header">Snow Depth</h5>
                 <div class="card-body">
@@ -174,17 +183,114 @@
                 </div>
               </div>
             </div>
+            <div class="col-xl-4 col-md-2">
+              <div class="card shadow mb-4">
+                <h5 class="card-header">24 Hour Wind Speed</h5>
+                <div class="card-body">
+                  <div class="responsive-plot" id="wind_rose">
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
 
           <!-- forecast -->
           <div class="row">
-            <div class="col-xl-12 mb-4">
+            <div class="col-xl-8 mb-4">
               <div class="card border-left-info shadow h-100">
-                <h5 class="card-header">Forecast</h5>
+                <h5 class="card-header">Naomi Peak Forecast</h5>
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="responsive-plot" id="forecast_plot_logan">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-4 mb-4">
+              <div class="card border-left-info shadow h-100">
+                <h5 class="card-header">Naomi Peak 7-Day Forecast</h5>
+                <div class="card-body">
+                  <div class="row no-gutters align-items-center">
+                    <div class="col mr-2">
+                      <div class="bd-example">
+                        <!-- <nav id="navbar-example2" class="navbar bg-light px-3">
+                        </nav> -->
+                        <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0"
+                          class="scrollspy-example position-relative mt-2 overflow-auto" tabindex="0">
+                          <h6 id="name_0"></h6>
+                          <div>
+                            <img id="icon_0" style='float: left;' />
+                            <p id="text_0"></p>
+                          </div>
+                          <h6 id="name_1"></h6>
+                          <div>
+                            <img id="icon_1" style='float: left;' />
+                            <p id="text_1"></p>
+                          </div>
+                          <h6 id="name_2"></h6>
+                          <div>
+                            <img id="icon_2" style='float: left;' />
+                            <p id="text_2"></p>
+                          </div>
+                          <h6 id="name_3"></h6>
+                          <div>
+                            <img id="icon_3" style='float: left;' />
+                            <p id="text_3"></p>
+                          </div>
+                          <h6 id="name_4"></h6>
+                          <div>
+                            <img id="icon_4" style='float: left;' />
+                            <p id="text_4"></p>
+                          </div>
+                          <h6 id="name_5"></h6>
+                          <div>
+                            <img id="icon_5" style='float: left;' />
+                            <p id="text_5"></p>
+                          </div>
+                          <h6 id="name_6"></h6>
+                          <div>
+                            <img id="icon_6" style='float: left;' />
+                            <p id="text_6"></p>
+                          </div>
+                          <h6 id="name_7"></h6>
+                          <div>
+                            <img id="icon_7" style='float: left;' />
+                            <p id="text_7"></p>
+                          </div>
+                          <h6 id="name_8"></h6>
+                          <div>
+                            <img id="icon_8" style='float: left;' />
+                            <p id="text_8"></p>
+                          </div>
+                          <h6 id="name_9"></h6>
+                          <div>
+                            <img id="icon_9" style='float: left;' />
+                            <p id="text_9"></p>
+                          </div>
+                          <h6 id="name_10"></h6>
+                          <div>
+                            <img id="icon_10" style='float: left;' />
+                            <p id="text_10"></p>
+                          </div>
+                          <h6 id="name_11"></h6>
+                          <div>
+                            <img id="icon_11" style='float: left;' />
+                            <p id="text_11"></p>
+                          </div>
+                          <h6 id="name_12"></h6>
+                          <div>
+                            <img id="icon_12" style='float: left;' />
+                            <p id="text_12"></p>
+                          </div>
+                          <h6 id="name_13"></h6>
+                          <div>
+                            <img id="icon_13" style='float: left;' />
+                            <p id="text_13"></p>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -242,6 +348,8 @@
   <script src="js/logan/mesowest_logan_snow.js" lang="text/javascript"></script>
   <script src="js/logan/camera_logan.js" lang="text/javascript"></script>
   <script src="js/logan/forecast_logan.js" lang="text/javascript"></script>
+  <script src="js/logan/forecast_7day_logan.js" lang="text/javascript"></script>
+  <script src="js/logan/wind_logan.js" lang="text/javascript"></script>
 
 </body>
 
