updated 7 day forecast

--- a/index_slc.html
+++ b/index_slc.html
@@ -232,95 +232,106 @@
                 </div>
               </div>
             </div>
+
+
             <div class="col-xl-4 mb-4">
               <div class="card border-left-info shadow h-100">
                 <h5 class="card-header">Alta UT 7-Day Forecast</h5>
                 <div class="card-body">
-                  <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
                       <div class="bd-example">
                         <!-- <nav id="navbar-example2" class="navbar bg-light px-3">
                         </nav> -->
                         <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0"
                           class="scrollspy-example position-relative mt-2 overflow-auto" tabindex="0">
-                          <h6 id="name_0"></h6>
-                          <div>
-                            <img id="icon_0" style='float: left;' />
-                            <p id="text_0"></p>
+
+                          <div class="row pb-3">
+                              <h6 id="name_0"></h6>
+                              <div class="col-md-3"><img id="icon_0"/></div>
+                              <div class="col-md-9"><p id="text_0"></p></div>
                           </div>
-                          <h6 id="name_1"></h6>
-                          <div>
-                            <img id="icon_1" style='float: left;' />
-                            <p id="text_1"></p>
+
+                          <div class="row pb-3">
+                            <h6 id="name_1"></h6>
+                            <div class="col-md-3"><img id="icon_1"/></div>
+                            <div class="col-md-9"><p id="text_1"></p></div>
                           </div>
-                          <h6 id="name_2"></h6>
-                          <div>
-                            <img id="icon_2" style='float: left;' />
-                            <p id="text_2"></p>
+
+                          <div class="row pb-3">
+                            <h6 id="name_2"></h6>
+                            <div class="col-md-3"><img id="icon_2"/></div>
+                            <div class="col-md-9"><p id="text_2"></p></div>
                           </div>
-                          <h6 id="name_3"></h6>
-                          <div>
-                            <img id="icon_3" style='float: left;' />
-                            <p id="text_3"></p>
+
+                          <div class="row pb-3">
+                            <h6 id="name_3"></h6>
+                            <div class="col-md-3"><img id="icon_3"/></div>
+                            <div class="col-md-9"><p id="text_3"></p></div>
                           </div>
-                          <h6 id="name_4"></h6>
-                          <div>
-                            <img id="icon_4" style='float: left;' />
-                            <p id="text_4"></p>
+
+                          <div class="row pb-3">
+                            <h6 id="name_4"></h6>
+                            <div class="col-md-3"><img id="icon_4"/></div>
+                            <div class="col-md-9"><p id="text_4"></p></div>
                           </div>
-                          <h6 id="name_5"></h6>
-                          <div>
-                            <img id="icon_5" style='float: left;' />
-                            <p id="text_5"></p>
+
+                          <div class="row pb-3">
+                            <h6 id="name_5"></h6>
+                            <div class="col-md-3"><img id="icon_5"/></div>
+                            <div class="col-md-9"><p id="text_5"></p></div>
                           </div>
-                          <h6 id="name_6"></h6>
-                          <div>
-                            <img id="icon_6" style='float: left;' />
-                            <p id="text_6"></p>
+
+                          <div class="row pb-3">
+                            <h6 id="name_6"></h6>
+                            <div class="col-md-3"><img id="icon_6"/></div>
+                            <div class="col-md-9"><p id="text_6"></p></div>
                           </div>
-                          <h6 id="name_7"></h6>
-                          <div>
-                            <img id="icon_7" style='float: left;' />
-                            <p id="text_7"></p>
+
+                          <div class="row pb-3">
+                            <h6 id="name_7"></h6>
+                            <div class="col-md-3"><img id="icon_7"/></div>
+                            <div class="col-md-9"><p id="text_7"></p></div>
                           </div>
-                          <h6 id="name_8"></h6>
-                          <div>
-                            <img id="icon_8" style='float: left;' />
-                            <p id="text_8"></p>
+
+                          <div class="row pb-3">
+                            <h6 id="name_8"></h6>
+                            <div class="col-md-3"><img id="icon_8"/></div>
+                            <div class="col-md-9"><p id="text_8"></p></div>
                           </div>
-                          <h6 id="name_9"></h6>
-                          <div>
-                            <img id="icon_9" style='float: left;' />
-                            <p id="text_9"></p>
+
+                          <div class="row pb-3">
+                            <h6 id="name_9"></h6>
+                            <div class="col-md-3"><img id="icon_9"/></div>
+                            <div class="col-md-9"><p id="text_9"></p></div>
                           </div>
-                          <h6 id="name_10"></h6>
-                          <div>
-                            <img id="icon_10" style='float: left;' />
-                            <p id="text_10"></p>
+
+                          <div class="row pb-3">
+                            <h6 id="name_10"></h6>
+                            <div class="col-md-3"><img id="icon_10"/></div>
+                            <div class="col-md-9"><p id="text_10"></p></div>
                           </div>
-                          <h6 id="name_11"></h6>
-                          <div>
-                            <img id="icon_11" style='float: left;' />
-                            <p id="text_11"></p>
+
+                          <div class="row pb-3">
+                            <h6 id="name_11"></h6>
+                            <div class="col-md-3"><img id="icon_11"/></div>
+                            <div class="col-md-9"><p id="text_11"></p></div>
                           </div>
-                          <h6 id="name_12"></h6>
-                          <div>
-                            <img id="icon_12" style='float: left;' />
-                            <p id="text_12"></p>
+
+                          <div class="row pb-3">
+                            <h6 id="name_12"></h6>
+                            <div class="col-md-3"><img id="icon_12"/></div>
+                            <div class="col-md-9"><p id="text_12"></p></div>
                           </div>
-                          <h6 id="name_13"></h6>
-                          <div>
-                            <img id="icon_13" style='float: left;' />
-                            <p id="text_13"></p>
+
+                          <div class="row pb-3">
+                            <h6 id="name_13"></h6>
+                            <div class="col-md-3"><img id="icon_13"/></div>
+                            <div class="col-md-9"><p id="text_13"></p></div>
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
-              </div>
-            </div>
-          </div>
           <!--  -->
 
           <h2>Traffic Cameras</h2>
